# Samoed

./: CMakeLists.txt  LICENSE  Model.mdj  README.md  Server_01.mdj
server/include/: databasemessagelist.h  dbmeslist.h  io.h  meslist.h  messageList.h  messageTypes.h  server_types.h  socet.h  socket.h  telbdshed.h  telemetrymessagelist.h  tmeslist.h  webbdshed.h  webmeslist.h  webmessagelist.h
server/src/: databasemessagelist.cpp  dbmeslist.cpp  main.cpp  server.cpp  socet.cpp  socket.cpp  telbdshed.cpp  telemetrymessagelist.cpp  tmeslist.cpp  webmeslist.cpp  webmessagelist.cpp
server/tests/: telemetry_spamer.cpp
